--- a/index.html
+++ b/index.html
@@ -2,37 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
     <title>Personal CV</title>
-    <style>
-        img{
-            height: 20%;
-            width: 10%;
-        }
-    </style>
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="#about">I am About link and my href value is #about</a></li>
-            <li><a href="#education">I am Education link and my href value is #education</a></li>
-            <li><a href="#skills">I am Skills link and my href value is #skills</a></li>
-            <li><a href="#portfolio">I am Portfolio link and my href value is #portfolio</a></li>
-            <li><a href="#contact">I am Contact link and my href value is #contact</a></li>
-        </ul>
+        <ul class="nav">
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="https://jaredclaw.github.io./">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+           </ul>
     </header>
 
     <img src="index.jpg" alt="I am an image and I'm all by myself" >
 
     <div class="page-content">
-        <h1>Hello! I am a text with the largest heading</h1>
+        <div class="card" id="about">
+            <p class="card-header">About</p>
+            <p class="card-body">Hello! Tell us about yourself.</p>
+            </div>
+            <div class="card" id="education">
+            <p class="card-header">Education</p>
+            <p class="card-body">Tell us about your education</p>
+            </div>
+            <div class="card" id="skills">
+            <p class="card-header">Skills</p>
+            <p class="card-body">Tell us about your IT Skills>
+            </div>
+            <div class="card" id="portfolio">
+            <p class="card-header">Portfolio</p>
+            <p class="card-body">Share your previous IT projects</p>
+            </div>
 
-        <div id="about">I am division with id equal to about</div>
-        <div id="education">I am division with id equal to education</div>
-        <div id="skills">I am division with id equal to skills</div>
-        <div id="portfolio">I am division with id equal to portfolio</div>
-        <div id="contact">I am division with id equal to contact</div>
-        
-        <footer>I am a footer the last section of this page</footer>
+            <div class="container">
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+                <div class="item">5</div>
+               </div>
+            
     </div>
 </body>
 </html>
